ci_cd/kubernetes/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: production
    managed-by: cicd-pipeline
