ci_cd/kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo
  namespace: prod
  labels:
    app: cicd-demo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: cicd-demo
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
